--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="https://em-content.zobj.net/thumbs/240/apple/354/man-technologist_1f468-200d-1f4bb.png" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- <link rel="apple-touch-icon" href="https://img.favpng.com/14/0/3/standard-test-image-acceptance-testing-png-favpng-Yy97FH3TSHfV906y3fKtRFFzL.jpg" /> -->
   <script src="https://unpkg.com/deck.gl@latest/dist.min.js"></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
   <!--
@@ -26,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>gh App</title>
+  <title>ghn</title>
 </head>
 
 <body>
